force-app/main/default/objects/market_intelligence__c/market_intelligence__c.object-meta.xml
<CustomObject>
    <label>Market Intelligence</label>
    <nameField>
        <label>Market Intelligence</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Intelligence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>