force-app/main/default/objects/market_intelligence__c/fields/Country_c__c.field-meta.xml
<CustomField>
    <fullName>Country_c__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>