force-app/main/default/objects/market_intelligence__c/fields/Impact_c__c.field-meta.xml
<CustomField>
    <fullName>Impact_c__c</fullName>
    <label>Impact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>