force-app/main/default/objects/market_intelligence__c/fields/Region_c__c.field-meta.xml
<CustomField>
    <fullName>Region_c__c</fullName>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>