force-app/main/default/objects/market_intelligence__c/fields/Summary_c__c.field-meta.xml
<CustomField>
    <fullName>Summary_c__c</fullName>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>