force-app/main/default/objects/market_intelligence__c/fields/Theme_c__c.field-meta.xml
<CustomField>
    <fullName>Theme_c__c</fullName>
    <label>Theme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>