force-app/main/default/objects/market_intelligence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Account__c</columns>
    <columns>Region_c__c</columns>
    <columns>Country_c__c</columns>
    <columns>Theme_c__c</columns>
    <columns>Impact_c__c</columns>
    <columns>Summary_c__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>